fix: header items overlapping fix

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,22 +1,46 @@
 .header_large {
     width: 100%;
     height: 100%;
-
+    white-space: nowrap;
 }
 
 .main_container {
     height: 60%;
     width: 100%;
     display: flex;
+
 }
 
 .welcome {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 50%;
     height: 87%;
     background: var(--main-background);
     background: var(--main-gradient);
 }
+
+.welcomeHero{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.hero {
+    /*position: relative;*/
+    /*top: 25%;*/
+    /*left: 5%;*/
+    max-width: 200px;
+    max-height: 200px;
+    transform: translateY(15%);
+}
+
 
 .welcome_photo {
     width: 50%;
@@ -24,11 +48,10 @@
 }
 
 .welcome_description {
-    position: absolute;
-    bottom: 45%;
-    right: 7%;
+    max-width: 100%;
     color: var(--main-color);
     font-size: 2rem;
+    overflow: hidden;
 }
 
 h3 {
@@ -38,7 +61,7 @@ h3 {
 
 .contactMe {
     position: absolute;
-    width: 60%;
+    width: 30%;
     border: 3px solid var(--main-color);
     border-radius: 10px;
     text-align: center;
@@ -48,15 +71,6 @@ h3 {
     transition: all 0.5s;
 }
 @keyframes contactBounce {
-    10% {
-        transform: scale(1);
-    }
-    20% {
-        transform: scale(1);
-    }
-    30% {
-        transform: scale(1);
-    }
     40% {
         transform: scale(1);
     }
@@ -66,19 +80,7 @@ h3 {
     60% {
         transform: scale(1);
     }
-    70% {
-        transform: scale(1);
-    }
-    80% {
-        transform: scale(1);
-    }
-    90% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(1);
-    }
-    
+
 }
 .contactMe:hover{
     background-color: var(--main-color);
@@ -86,7 +88,7 @@ h3 {
 }
 
 .welcome_traits {
-    position: absolute;
+    align-self: flex-end;
     display: flex;
     justify-content: space-evenly;
     color: var(--main-color);
@@ -96,21 +98,56 @@ h3 {
 }
 
 .passion {
-
+    opacity: 0;
+    animation: traitsLoading 2s 1 forwards;
+    animation-delay: .3s;
 }
 
 .desire {
-
+    opacity: 0;
+    animation: traitsLoading 2s 1 forwards;
+    animation-delay: .5s;
 }
 
 .patience {
-
+    opacity: 0;
+    animation: traitsLoading 2s 1 forwards;
+    animation-delay: 1s;
 }
 
 .creativity {
-
+    opacity: 0;
+    animation: traitsLoading 2s 1 forwards;
+    animation-delay: 1.5s;
 }
 
 .discipline {
+    opacity: 0;
+    animation: traitsLoading 2s 1 forwards;
+    animation-delay: 2s;
+}
+
+@keyframes traitsLoading {
+    10 %
+    {
+        opacity: 0%;
+    }
+    100% {
+       opacity: 100%;
+    }
 
 }
+
+
+/*@media (max-width: 1440px) {*/
+/*    .welcome_photo{*/
+/*        width: 100%;*/
+/*        height: 50%;*/
+/*    }*/
+/*    .welcome {*/
+/*        width: 100%*/
+/*    }*/
+/*    .main_container{*/
+/*        flex-direction: column;*/
+/*    }*/
+/*}*/
